--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -20,7 +20,7 @@ div#wall div.parent #tag-5.slick {
   display: none;
 }
 
-div#wall div.parent div~div > div#tag-6 ::selection {
+div#wall div.parent div~div > div#tag-6 {
   display: none;
 }
 
